# cashj

./: LICENSE  README.md
backend/: .env  docker-compose.yaml  pyproject.toml
backend/api/: __main__.py  crud.py  database.py  models.py  schema.py
backend/docker/fastapi/: Dockerfile
backend/docker/postgres/: Dockerfile  init.sql
desktop/app/: __main__.py
frontend/app/: package-lock.json  package.json
frontend/app/src/lib/: store.js
frontend/app/src/lib/components/: BackArrow.svelte  Categories.svelte  Conteggio.svelte  Counter.svelte  Ordina.svelte  Products.svelte  Selection.svelte  Tables.svelte  Time.svelte  Totale.svelte
frontend/app/src/routes/application/: +page.svelte
frontend/app/static/: app.css
generation/: gen_data.py  static_data.json
