[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["leonardogonfiantini <lp.gonfiantini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
SQLAlchemy = "^2.0.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.16"

[tool.poetry.scripts]
start = "api.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
